--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,14 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.graalvm.nativeimage/svm -->
+		<dependency>
+			<groupId>org.graalvm.nativeimage</groupId>
+			<artifactId>svm</artifactId>
+			<version>23.1.1</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -46,7 +54,7 @@
 				<configuration>
 					<buildArgs>
 						<arg>
-							--initialize-at-build-time=org.bouncycastle
+
 							--initialize-at-run-time=org.bouncycastle.crypto.prng.SP800SecureRandom
 							--initialize-at-run-time=org.bouncycastle.jcajce.provider.drbg.DRBG$Default
 							--initialize-at-run-time=org.bouncycastle.jcajce.provider.drbg.DRBG$NonceAndIV
